Update README.md about JavaFX setup.