@@ -1,1 +1,7 @@
 # LoadStarter
+## Setup For Java11
+### Download JavaFX SDK
+https://gluonhq.com/products/javafx/
+### VM arguments
+--module-path C:\Users\<user>\Downloads\javafx-sdk-11\lib --add-modules=javafx.controls
+
